--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_large">16sp</dimen>
     <dimen name="text_medium">14sp</dimen>
     <dimen name="margin_2dp">2dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
 </resources>
