--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,7 +20,8 @@
                 android:id="@+id/imageview_details"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:scaleType="center"/>
+                android:scaleType="fitXY"
+                android:contentDescription="@string/desc_project_image"/>
 
             <ProgressBar
                 android:id="@+id/loading_bar"
