--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -34,6 +34,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_details"/>
+    <include
+        layout="@layout/content_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"/>
 
 </android.support.design.widget.CoordinatorLayout>
